--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ img {
 }
 
 .app {
-
+  max-width: 850px;
+  margin: auto;
+  padding: 40px 0;
 }
 
 .car-wrapper {
   display: flex;
   justify-content: center;
-  margin-top: 30px;
 }
 
 .car {
